@@ -8,6 +8,7 @@ Changes in version 1.0.1 (200y-mm-dd)
 General
 * fixed nested Eclipse classpath entry in spring-osgi bundle archetype
 * added log4j.properties to spring-osgi bundle archetype
+* added OSGi integration test to the spring-osgi bundle archetype
 
 Package org.springframework.context.support
 * the namespace resolver mechanism first checks the local bundle classpath before using the extender namespace service
